# Todo.Api.Django.Rest

./: README.md  manage.py  pyproject.toml  requirements.txt  runtime.txt
tasks/: models.py
tasks/api/: serializer.py  viewsets.py
tasks/migrations/: 0001_initial.py  0002_auto_20230127_2325.py  0003_auto_20230127_2330.py  0004_task_status.py  0005_auto_20230202_2144.py
todoApi/: settings.py  urls.py  wsgi.py
