[tool.poetry]
name = "todo-api-django-rest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "todo"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "2.1.7"
djangorestframework = "3.8.2"
pipenv = "^2022.12.19"
python-decouple = "^3.7"
dj-database-url = "0.5.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
